<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <TextView
        android:id="@+id/busAboutTv"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/busRegister"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_register" />

    <Button
        android:id="@+id/busUnregister"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_unregister" />

    <Button
        android:id="@+id/busPost"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_post" />

    <Button
        android:id="@+id/busPostBasicType"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_post_basic_type" />

    <Button
        android:id="@+id/busPostSticky"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_post_sticky" />

    <Button
        android:id="@+id/busPost2IoThread"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_post_to_io_thread" />

    <Button
        android:id="@+id/busRemoveSticky"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_remove_sticky" />

    <Button
        android:id="@+id/busStartCompare"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_start_compare" />


</LinearLayout>