<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <Button
        android:id="@+id/clickViewScaleDefaultBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_view_scale_default" />

    <Button
        android:id="@+id/clickViewScaleCustomBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_view_scale_custom" />

    <Button
        android:id="@+id/clickViewAlphaDefaultBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_view_alpha_default" />

    <Button
        android:id="@+id/clickBgAlphaDefaultBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_bg_alpha_default" />

    <Button
        android:id="@+id/clickBgDarkDefaultBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_bg_dark_default" />

    <Button
        android:id="@+id/clickSingleDebouncingBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_single_debouncing" />

    <Button
        android:id="@+id/clickGlobalDebouncingBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_global_debouncing" />

    <Button
        android:id="@+id/clickMultiBtn"
        style="@style/CommonWideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_multi" />

</LinearLayout>