<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <Button
        android:id="@+id/messengerRegisterRemoteClient"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messenger_register_remote_client" />

    <Button
        android:id="@+id/messengerUnregisterRemoteClient"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messenger_unregister_remote_client" />

    <Button
        android:id="@+id/messengerRemotePost2SelfClientBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messenger_post_to_self_client" />

    <Button
        android:id="@+id/messengerRemotePost2MainClientBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messenger_post_to_main_server" />

</LinearLayout>