<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <TextView
        android:id="@+id/busCompareAboutTv"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/busCompareRegister10000TimesBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_compare_register_10000_times" />

    <Button
        android:id="@+id/busComparePostTo1Subscriber1000000TimesBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_compare_post_to_1_subscriber_1000000_times" />

    <Button
        android:id="@+id/busComparePostTo100Subscribers100000TimesBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_compare_post_to_100_subscriber_100000_times" />

    <Button
        android:id="@+id/busCompareUnregister10000TimesBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bus_compare_unregister_10000_times" />

</LinearLayout>