<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <TextView
        android:id="@+id/keyboardAboutTv"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/keyboardHideSoftInputBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboardAboutTv"
        android:text="@string/keyboard_hide_soft_input" />

    <Button
        android:id="@+id/keyboardShowSoftInputBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboardHideSoftInputBtn"
        android:text="@string/keyboard_show_soft_input" />

    <Button
        android:id="@+id/keyboardToggleSoftInputBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboardShowSoftInputBtn"
        android:text="@string/keyboard_toggle_soft_input" />

    <Button
        android:id="@+id/keyboardShowDialogBtn"
        style="@style/WideBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboardToggleSoftInputBtn"
        android:text="@string/keyboard_show_dialog" />

    <EditText
        android:id="@+id/keyboardEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:inputType="phone" />

</RelativeLayout>